--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-PyQt5
-pandas
-attrs
-selenium
-multiprocess
-XlsxWriter
+PyQt5~=5.15.9
+pandas~=2.1.1
+attrs~=23.1.0
+selenium~=4.13.0
+multiprocess~=0.70.15
+XlsxWriter~=3.1.5
 PyQt-Fluent-Widgets
+python-dotenv~=1.0.0
